# orvis

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  models.yaml  package.xml  requirements.txt  requirements_v2.txt  service_test_results.csv
action/: PickPlace.action
annotators/: depth_estimator.py  image_classifier.py  image_segmenter.py  image_to_text.py  object_detector.py  pose_detector.py  prompted_image_classifier.py  prompted_object_detector.py  template.py  video_classifier.py
config/: main_config.yaml  orvis_config.yaml  template.yaml
config/models/: clip_vit_large_patch14.yaml  detr_resnet_50.yaml  detr_resnet_50_panoptic.yaml  dpt_hybrid_midas.yaml  fire_detection_engine.yaml  google_mobilenet_v2_1.0_224.yaml  google_mobilenet_v2_1_0_224.yaml  hf_loader.py  ioanasong_vit_MINC_2500.yaml  kosmos_2_patch14_224.yaml  material_detector.yaml  owl_v2.yaml  segformer_b1.yaml  timesformer_hr_finetuned_k600.yaml  yolos_tiny.yaml
config/wip/: material_detector.yaml
experiments/perceived-entity-linking/: .watch_hash.json  analysis.py  autocommit.py  experiment.py  experiment_improved.py  results-['imagenet', 'txt'].csv  results-altlabel-context-imagenet.csv  results-altlabel-context-visual_genome.csv  results-baseline-imagenet.csv  results-baseline-visual_genome.csv  results-complete-depth1-imagenet.csv  results-complete-depth1-visual_genome.csv  results-complete-imagenet.csv  results-no-context-imagenet.csv  results-no-context-visual_genome.csv  results-no-noun-imagenet.csv  results-no-noun-visual_genome.csv  results-no-physical-imagenet.csv  results-no-physical-visual_genome.csv  results-no_disamb-imagenet.csv  results-no_disamb-visual_genome.csv  results-v2.csv  results.csv
experiments/perceived-entity-linking/results/: altlabel-context-imagenet.csv  altlabel-context-visual_genome.csv  baseline-imagenet.csv  baseline-visual_genome.csv  complete-altlabel-visual_genome.csv  complete-imagenet.csv  complete-imagenet.metrics.json  complete-visual_genome.csv  no-context-imagenet.csv  no-context-visual_genome.csv  no-disamb-imagenet.csv  no-disamb-visual_genome.csv  no-noun-imagenet.csv  no-noun-visual_genome.csv  no-physical-imagenet.csv  no-physical-visual_genome.csv
launch/: color_assigner.launch  colour_assigner.launch  main.launch  orvis_main.launch  orvis_simulation.launch  test.launch
linking/: create_wn_kb.ipynb  linker.py
msg/: BoundingBox.msg  ImageMask.msg  ImageMasks.msg  PerceivedObject.msg  PerceivedObjects.msg
obs_graphs/: catalog-v001.xml  orvis_orka_20250115183353.owl  orvis_orka_20250115183443.owl  orvis_orka_20250115183736.owl  orvis_orka_20250115185228.owl  orvis_orka_20250115185411.owl  orvis_orka_20250115190651.owl  orvis_orka_20250115190907.owl  orvis_orka_20250116151132.owl  orvis_orka_20250116183836.owl  orvis_orka_20250116190625.owl  orvis_orka_20250116190716.owl  orvis_orka_20250116190741.owl  orvis_orka_20250116191203.owl  orvis_orka_20250116191342.owl  orvis_orka_20250116191649.owl  orvis_orka_20250122143213.owl  orvis_orka_20250122143310.owl  orvis_orka_20250122143943.owl  orvis_orka_20250122144151.owl  orvis_orka_20250122144412.owl
obs_graphs/run_20250204194053/: catalog-v001.xml  orvis_orka_20250204194053.owl
obs_graphs/run_20250204194533/: catalog-v001.xml  orvis_orka_20250204194533.owl
obs_graphs/run_20250205160423/: catalog-v001.xml  orvis_orka_20250205160423.owl
results/: location_query_results.csv
scripts/: color_assignment_service.py  colour_assignment_service.py  experiment.py  get3Dcoordinates.py  main.py  model_loader.py  plot_query_times.py  plot_service_times.py  query_tester.py  rosbag_record.py  run_individual_services.py  service_call_times.csv  service_evaluation_times.csv  service_manager.py  service_manager_compact.py  service_summary_statistics.csv  service_tester.py  summary_statistics.csv  task_selector.py  utils.py  vlm_service_node.py  vlm_test_node.py
scripts/results/: annotator_query_results.csv  service_evaluation_times.csv
srv/: AssignColour.srv  DepthEstimation.srv  Get3DCoordinates.srv  ImageClassification.srv  ImageDetection.srv  ImageMaskDetection.srv  LoadModels.srv  PointCloudDetection.srv  PromptedImageClassification.srv  PromptedImageDetection.srv  VLM.srv  VideoClassification.srv
test/: README.md  config.yaml  depthTo3D.py  id2label_converter.py  img2text.py  service_call_times.csv  service_test_results.csv  test3Dcoordinates.py  test_imageclassification.py  test_models_depth_estimation.py  test_models_object_detection.py  test_query.py  test_segment.py  video_classification.py  visualize_test.py  webcam.py
test/hftests/: depth-estimation.csv  hf_statistics.py  model_extractor.py  testmodelsize.py
test/modeltests/: fireclassifier.py  test_detr.py  test_owlv2.py
test/servicetests/: test_imageclassification.py  test_models_depth_estimation.py  test_models_general.py  test_models_object_detection.py  test_pickplace_client.py  test_promptedimageclassification.py
